# BallSimulation

./: CMakeLists.txt  README.md
src/scripts/: app
src/scripts/cpp/: app.cpp  ball.cpp  main.cpp  renderer.cpp  sound.cpp
src/scripts/headers/: app.hpp  ball.hpp  renderer.hpp  sound.hpp  window_settings.hpp
